<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jormelcn.coursera.semaa3.activitiesmanagement.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_input"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/fecha_input"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateButton"
                android:textSize="15dp"
                android:theme="@style/ButtonStyle"
                android:onClick="showDatePicker"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_input"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_input" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:layout_alignParentBottom="true"
        android:textSize="20dp"
        android:theme="@style/ButtonStyle"
        android:onClick="nextActivity"
        />

</RelativeLayout>
